remove stackoverflow issue

--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -9,9 +9,9 @@
   transform: translate(-50%, -50%);
   padding: 16px;
   border: variables.$border-primary;
-  background: variables.$bg-color-secondary;
-  width: 320px;
-  height: 320px;
+  background: variables.$bg-gradient;
+  width: 576px;
+  height: 576px;
   max-width: 100vw;
   max-height: 100vh;
   z-index: variables.$modal-z-index;
